update Readme and add screenshots